SpaceDrawer: avoid a potential infinite loop

This maybe fixes:
https://bugzilla.gnome.org/show_bug.cgi?id=769901